--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-document-editor",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Paper-sized WYSIWYG document editor for Vue apps",
   "author": {
     "name": "Romain Lamothe",
@@ -29,7 +29,7 @@
   "homepage": "https://github.com/motla/vue-document-editor",
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build --dest docs && vue-cli-service build --target lib --name vue-document-editor src/DocumentEditor/DocumentEditor.vue",
+    "build": "vue-cli-service build --dest docs && vue-cli-service build --target lib --name VueDocumentEditor src/DocumentEditor/DocumentEditor.vue",
     "lint": "vue-cli-service lint",
     "preversion": "npm run lint",
     "version": "npm run build && git add -A"
