--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-document-editor",
-  "version": "1.1.2",
+  "version": "1.2.0",
   "description": "Paper-sized WYSIWYG document editor for Vue apps",
   "author": {
     "name": "Romain Lamothe",
@@ -36,18 +36,18 @@
   },
   "main": "src/DocumentEditor/DocumentEditor.vue",
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.4.0",
-    "@vue/cli-plugin-eslint": "~4.4.0",
-    "@vue/cli-service": "~4.4.0",
+    "@vue/cli-plugin-babel": "^4.5.11",
+    "@vue/cli-plugin-eslint": "^4.5.11",
+    "@vue/cli-service": "^4.5.11",
     "babel-eslint": "^10.1.0",
-    "core-js": "^3.6.5",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "sass": "^1.26.5",
+    "core-js": "^3.9.1",
+    "eslint": "^7.21.0",
+    "eslint-plugin-vue": "^7.6.0",
+    "sass": "^1.32.8",
     "sass-loader": "^8.0.2",
-    "vue": "^2.6.11",
-    "vue-file-toolbar-menu": "^1.1.0",
-    "vue-template-compiler": "^2.6.11"
+    "vue": "^2.6.12",
+    "vue-file-toolbar-menu": "^1.3.3",
+    "vue-template-compiler": "^2.6.12"
   },
   "eslintConfig": {
     "root": true,
