--- a/package.json
+++ b/package.json
@@ -36,18 +36,18 @@
   },
   "main": "src/DocumentEditor/DocumentEditor.vue",
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.5.11",
-    "@vue/cli-plugin-eslint": "^4.5.11",
-    "@vue/cli-service": "^4.5.11",
+    "@vue/cli-plugin-babel": "^4.5.0",
+    "@vue/cli-plugin-eslint": "^4.5.0",
+    "@vue/cli-service": "^4.5.0",
+    "@vue/compiler-sfc": "^3.2.19",
     "babel-eslint": "^10.1.0",
-    "core-js": "^3.9.1",
-    "eslint": "^7.21.0",
-    "eslint-plugin-vue": "^7.7.0",
-    "sass": "^1.32.8",
-    "sass-loader": "^8.0.2",
-    "vue": "^2.6.12",
-    "vue-file-toolbar-menu": "^1.3.4",
-    "vue-template-compiler": "^2.6.12"
+    "core-js": "^3.18.1",
+    "eslint": "^6.8.0",
+    "eslint-plugin-vue": "^7.18.0",
+    "sass": "^1.42.1",
+    "sass-loader": "^8.0.0",
+    "vue": "^3.2.19",
+    "vue-file-toolbar-menu": "^2.0.0"
   },
   "eslintConfig": {
     "root": true,
