--- a/package.json
+++ b/package.json
@@ -36,15 +36,16 @@
   },
   "main": "src/DocumentEditor/DocumentEditor.vue",
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.5.11",
-    "@vue/cli-plugin-eslint": "^4.5.11",
-    "@vue/cli-service": "^4.5.11",
-    "babel-eslint": "^10.1.0",
-    "core-js": "^3.9.1",
+    "@babel/core": "^7.12.16",
+    "@babel/eslint-parser": "^7.12.16",
+    "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-service": "~5.0.0",
+    "core-js": "^3.8.3",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^7.19.0",
-    "sass": "^1.32.8",
-    "sass-loader": "^8.0.2",
+    "eslint-plugin-vue": "^8.0.3",
+    "sass": "^1.32.7",
+    "sass-loader": "^12.0.0",
     "vue": "^2.6.14",
     "vue-file-toolbar-menu": "^1.3.4",
     "vue-template-compiler": "^2.6.14"
@@ -59,9 +60,11 @@
       "eslint:recommended"
     ],
     "parserOptions": {
-      "parser": "babel-eslint"
+      "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "vue/multi-word-component-names": "off"
+    }
   },
   "browserslist": [
     "> 1%",
