--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vue/cli-plugin-babel": "^5.0.8",
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "^5.0.8",
+    "@vueuse/core": "^10.2.1",
     "typescript": "~4.5.5",
     "vue": "^3.2.45",
     "vue-file-toolbar-menu": "^2.2.0"
